<resources>
    <string name="app_name">Operaciones</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="num1">Número 1: </string>
    <string name="num2">Número 2: </string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">x</string>
    <string name="division">/</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="campos_vacios">Hay uno o varios campos vacios</string>
    <string name="sin_operacion">Seleccione una Operación</string>
</resources>
