<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/num1"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:id="@+id/eNum1"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/num2"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:id="@+id/eNum2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            >
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/suma"
                    android:textSize="70dp"
                    android:textColor="@color/white"
                    android:id="@+id/rSuma"/>
                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/resta"
                    android:textSize="70dp"
                    android:textColor="@color/white"
                    android:id="@+id/rResta"/>
                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/division"
                    android:textSize="70dp"
                    android:textColor="@color/white"
                    android:id="@+id/rDivision"/>
                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/multiplicacion"
                    android:textSize="70dp"
                    android:textColor="@color/white"
                    android:id="@+id/rMultiplicacion"/>


                </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="3"

            >
            <Button
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:textSize="30dp"
                android:text="@string/calcular"
                android:layout_gravity="center"
                android:id="@+id/bCalcular"/>


            </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/resultado"
                android:textSize="40dp"
                android:id="@+id/tResultado"
                android:textColor="@color/white"
                />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
